--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "themes/hugo-shortcode-roneo-collection"]
 	path = themes/hugo-shortcode-roneo-collection
 	url = https://gitlab.com/Roneo/hugo-shortcode-roneo-collection.git
+[submodule "themes/hugo-book"]
+	path = themes/hugo-book
+	url = https://github.com/alex-shpak/hugo-book
