--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -125,6 +125,11 @@
   pageRef = "protocols/map-network-drive"
 
 [[main]]
+  parent = "Protocols"
+  name = "Coverslip Thickness"
+  pageRef = "protocols/coverslip-thickness"  
+
+[[main]]
   name = "Training"
   pageRef = "training"
 
